k8s/apps/argocd/directory/guestbook/ingress--guestbook-ui.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
spec:
  rules:
    - host: guestbook.dir.argocd.172.18.0.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
